# thesis_avalor

./: CMakeLists.txt  README.md  package.xml  setup.py
.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  local_setup.bash
catkin_ws/src/: .rosinstall
cfg/: TargetConfig.cfg  VelocityConfig.cfg
config/: experiment_params.yaml
devel/: _setup_util.py  env.sh  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/libmavconn/: setup.sh
devel/.private/mavros/: .catkin  .rosinstall
devel/.private/mavros_extras/: .catkin  .rosinstall  local_setup.sh
devel/.private/mavros_msgs/: .catkin  local_setup.sh
devel/.private/offboard_py/: .catkin  local_setup.sh  setup.sh
devel/.private/test_mavros/: .catkin
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CameraImageCaptured.h  CellularStatus.h  CommandAck.h  CommandAckRequest.h  CommandAckResponse.h  CommandBoolRequest.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerInterval.h  CommandVtolTransitionRequest.h  DebugValue.h  ESCInfo.h  ESCInfoItem.h  ESCStatus.h  ESCStatusItem.h  ESCTelemetryItem.h  EstimatorStatus.h  ExtendedState.h  FileChecksum.h  FileChecksumRequest.h  FileClose.h  FileCloseResponse.h  FileEntry.h  FileList.h  (+93 more)
devel/lib/mavros/: checkid  gcs_bridge  mavcmd  mavftp  mavros_node  mavsafety  mavsetp  mavsys  mavwp
devel/lib/mavros_extras/: servo_state_publisher  (+1 more)
launch/: experiment.launch  gazebo_simulation.launch  hitl_experiment.launch  multi_uav_mavros_sitl.launch  video_stream.launch
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
logs/mavros_extras/: build.make.000.log.stderr
logs/offboard_py/: build.check.011.log.stderr
scripts/: analysis.py  follow.py  image_resizer.py  intercept.py  kalman_filter.py  main.py  pid_controller.py  projector.py  search.py  take_off.py  target.py  tracker.py  velocity.py
scripts/Old scripts/: attitude.py  position.py  test.py
src/: .rosinstall  .rosinstall.bak
src/offboard_py/: CMakeLists.txt  package.xml
(+670 files in other folders)
