<?xml version="1.0"?>
<package format="2">
  <name>offboard_py</name>
  <version>0.0.1</version>
  <description>The offboard_py package</description>

  <maintainer email="cle@todo.todo">cle</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>python3</build_depend>  <!-- Add python3 as a build dependency -->

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>python3</exec_depend>  <!-- Add python3 as an exec dependency -->

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
